plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.sparta'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	runtimeOnly 'com.mysql:mysql-connector-j'

	// MySQL
	implementation 'mysql:mysql-connector-java:8.0.28'

	// JDBC Template
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'

	// Constraint 어노테이션 구현체 추가
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.mysql:mysql-connector-j'

	// QueryDSL 관련 의존성
	implementation 'org.hibernate.validator:hibernate-validator'
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
	annotationProcessor("com.querydsl:querydsl-apt:5.0.0:jakarta")
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'

	//비밀번호 암호화를 위해 의존성을 추가
	implementation 'at.favre.lib:bcrypt:0.10.2'
}

tasks.named('test') {
	useJUnitPlatform()
}
